--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "wabot-aq",
+  "name": "BOT NISSAN",
   "version": "1.2.8",
-  "description": "Customizable WhatsApp Bot",
+  "description": "Modified WhatsApp Bot",
   "depecrated": false,
   "main": "index.js",
   "directories": {
@@ -21,7 +21,7 @@
   ],
   "homepage": "https://github.com/Nurutomo/wabot-aq",
   "author": {
-    "name": "Nurutomo"
+    "name": "NISSAN"
   },
   "repository": {
     "url": "https://github.com/Nurutomo/wabot-aq.git"
